# rust_read_from_file

./: Cargo.toml  README.md  build.yml  cargo-generate.toml  faust-complete.txt  test.txt
src/: main.rs
