[package]
name = "{{ crate_name }}"
features = "{{ features }}"
environment = "{{ environment }}"
version = "0.1.0"
edition = "2024"
authors = ["{{ authors }}"]
description = "Your project description"
repository = "https://github.com/weltbester/{{ crate_name }}.git"
license = "MIT"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0"
